fix: url adress for handler /temp/files/status/{task_id}
